NeurIPS21 pages, SP22 impact

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1109,9 +1109,10 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   year={2021},
   author={Yang, Zhuolin and Li, Linyi and Xu, Xiaojun and Zuo, Shiliang and Chen, Qian and Zhou, Pan and Rubinstein, Benjamin and Zhang, Ce and Li, Bo},
   presort={01},
-  booktitle={Proceedings of the Thirty-Fifth Annual Conference on Neural Information Processing Systems},
+  booktitle={Advances in Neural Information Processing Systems},
   series={NeurIPS},
-  note={Accepted},
+  pages={17642--17655},
+  volume={34},
   rmdnote={pub=https://papers.nips.cc/paper/2021/hash/937936029af671cf479fa893db91cbdd-Abstract.html;full=https://arxiv.org/abs/2104.00671}
 }
 
