--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1299,10 +1299,10 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   title={Are We There Yet? Timing and Floating-Point Attacks on Differential Privacy Systems},
   author={Jiankai Jin and Eleanor McMurtry and Benjamin I. P. Rubinstein and Olga Ohrimenko},
   year={2022},
-  booktitle={Proceedings of the 43rd IEEE Symposium on Security and Privacy},
-  note={Accepted},
+  booktitle={2022 IEEE Symposium on Security and Privacy (SP)},
+  pages={1547--1547},
   presort={01},
-  rmdnote={full=https://arxiv.org/abs/2112.05307}
+  rmdnote={full=https://arxiv.org/abs/2112.05307;pub=https://www.computer.org/csdl/proceedings-article/sp/2022/131600b547/1CIO7Ty2xr2}
 }
 
 @inproceedings{marchant2022hard,
