arXiv certified rounding

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1348,3 +1348,14 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   presort={05},
   rmdnote={full=https://arxiv.org/abs/2112.15498}
 }
+
+@misc{jin2022getting,
+  title={Getting a-Round Guarantees: Floating-Point Attacks on Certified
+  Robustness},
+  author={Jiankai Jin and Olga Ohrimenko and Benjamin I. P. Rubinstein},
+  note={arXiv:2205.10159 [cs.CR]},
+  year={2022},
+  month={May},
+  presort={6},
+  rmdnote={pdf=https://arxiv.org/abs/2205.10159}
+}
