--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1338,6 +1338,16 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={Accepted}
 }
 
+@inproceedings{sun2022securing,
+  title={Securing Cyber-Physical Systems: Physics-Enhanced  Adversarial Learning for Autonomous Platoons},
+  author={Guoxin Sun and Tansu Alpcan and Benjamin I. P. Rubinstein and Seyit Camtepe},
+  booktitle={Machine Learning and Knowledge Discovery in Databases: Applied Data Science Track},
+  series={ECML-PKDD},
+  year={2022},
+  presort={05},
+  note={Accepted}
+}
+
 @inproceedings{liu2022state,
   title = {State Selection Algorithms and Their Impact on The Performance of Stateful Network Protocol Fuzzing},
   author = {Dongge Liu and Van-Thuan Pham and Gidon Ernst and Toby Murray and Benjamin I.P. Rubinstein},
@@ -1345,7 +1355,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   year = {2022},
   series = {SANER},
   note = {REproducibility Studies and NEgative Results (RENE) Track},
-  presort={05},
+  presort={06},
   rmdnote={full=https://arxiv.org/abs/2112.15498}
 }
 
@@ -1356,6 +1366,6 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={arXiv:2205.10159 [cs.CR]},
   year={2022},
   month={May},
-  presort={6},
+  presort={07},
   rmdnote={pdf=https://arxiv.org/abs/2205.10159}
 }
