--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1235,7 +1235,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   title={Strategic mitigation against wireless attacks on autonomous platoons},
   author={Guoxin Sun and Tansu Alpcan and Benjamin I. P. Rubinstein and Seyit Camtepe},
   year={2021},
-  booktitle={Machine Learning and Knowledge Discovery in Databases: Applied Data Science Track},
+  booktitle={European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases},
   series={ECML-PKDD},
   pages={69--84},
   presort={13},
@@ -1341,7 +1341,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
 @inproceedings{sun2022securing,
   title={Securing Cyber-Physical Systems: Physics-Enhanced  Adversarial Learning for Autonomous Platoons},
   author={Guoxin Sun and Tansu Alpcan and Benjamin I. P. Rubinstein and Seyit Camtepe},
-  booktitle={Machine Learning and Knowledge Discovery in Databases: Applied Data Science Track},
+  booktitle={European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases},
   series={ECML-PKDD},
   year={2022},
   presort={05},
