--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1105,7 +1105,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
 }
 
 @inproceedings{yang2021characterizing,
-  title={Characterizing Adversarial Transferability via Gradient Orthogonality and Smoothness},
+  title={TRS: Transferability Reduced Ensemble via Promoting Gradient Diversity and Model Smoothness},
   year={2021},
   author={Yang, Zhuolin and Li, Linyi and Xu, Xiaojun and Zuo, Shiliang and Chen, Qian and Zhou, Pan and Rubinstein, Benjamin and Zhang, Ce and Li, Bo},
   presort={01},
