--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1305,15 +1305,17 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   rmdnote={full=https://arxiv.org/abs/2112.05307;pub=https://www.computer.org/csdl/proceedings-article/sp/2022/131600b547/1CIO7Ty2xr2}
 }
 
-@inproceedings{marchant2022hard,
+@article{marchant2022hard,
   title={Hard to Forget: Poisoning Attacks on Certified Machine Unlearning},
   author={Neil G. Marchant and Benjamin I. P. Rubinstein and Scott Alfeld},
   year={2022},
-  booktitle={Proceedings of the 36th AAAI Conference on Artificial Intelligence},
+  journal={Proceedings of the 36th AAAI Conference on Artificial Intelligence},
   series={AAAI},
-  note={Accepted},
+  volume={36},
+  number={7},
+  pages={7691--7700},
   presort={02},
-  rmdnote={full=https://arxiv.org/abs/2109.08266;code=https://github.com/ngmarchant/attack-unlearning}
+  rmdnote={full=https://arxiv.org/abs/2109.08266;code=https://github.com/ngmarchant/attack-unlearning;pub=https://doi.org/10.1609/aaai.v36i7.20736}
 }
 
 @article{edwards2020a,
@@ -1331,11 +1333,12 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
 @inproceedings{wang2022a,
   title={Measuring and Mitigating Name Biases in Neural Machine Translation},
   author={Jun Wang and Benjamin I. P. Rubinstein and Trevor Cohn},
-  booktitle={Proceedings of the 60th Annual Meeting of the Association for Computational Linguistics},
+  booktitle={Proceedings of the 60th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
   series={ACL},
+  pages={2576--2590},
   year={2022},
   presort={04},
-  note={Accepted}
+  rmdnote={pub=https://aclanthology.org/2022.acl-long.184/}
 }
 
 @inproceedings{sun2022securing,
