--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1285,16 +1285,6 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   rmdnote={pdf=https://arxiv.org/abs/2108.10130}
 }
 
-@misc{weera2021local,
-  title={Local Intrinsic Dimensionality Signals Adversarial Perturbations},
-  author={Sandamal Weerasinghe and Tansu Alpcan and Sarah M. Erfani and Christopher Leckie and Benjamin I. P. Rubinstein},
-  note={arXiv:2109.11803 [cs.LG]},
-  year={2021},
-  month={Sep},
-  presort={18},
-  rmdnote={pdf=https://arxiv.org/abs/2109.11803}
-}
-
 @inproceedings{jin2022are,
   title={Are We There Yet? Timing and Floating-Point Attacks on Differential Privacy Systems},
   author={Jiankai Jin and Eleanor McMurtry and Benjamin I. P. Rubinstein and Olga Ohrimenko},
@@ -1341,13 +1331,24 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   rmdnote={pub=https://aclanthology.org/2022.acl-long.184/}
 }
 
+@inproceedings{weera2021local,
+  title={Local Intrinsic Dimensionality Signals Adversarial Perturbations},
+  author={Sandamal Weerasinghe and Tansu Alpcan and Sarah M. Erfani and Christopher Leckie and Benjamin I. P. Rubinstein},
+  booktitle={2022 IEEE 61st Conference on Decision and Control},
+  series={CDC},
+  note={Accepted. In invited session Resilience, Security, and Privacy for Intelligent and Interconnected Systems},
+  year={2022},
+  presort={05},
+  rmdnote={full=https://arxiv.org/abs/2109.11803}
+}
+
 @inproceedings{sun2022securing,
   title={Securing Cyber-Physical Systems: Physics-Enhanced  Adversarial Learning for Autonomous Platoons},
   author={Guoxin Sun and Tansu Alpcan and Benjamin I. P. Rubinstein and Seyit Camtepe},
   booktitle={European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases},
   series={ECML-PKDD},
   year={2022},
-  presort={05},
+  presort={06},
   note={Accepted}
 }
 
@@ -1358,7 +1359,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   year = {2022},
   series = {SANER},
   note = {REproducibility Studies and NEgative Results (RENE) Track},
-  presort={06},
+  presort={07},
   rmdnote={full=https://arxiv.org/abs/2112.15498}
 }
 
@@ -1369,6 +1370,6 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={arXiv:2205.10159 [cs.CR]},
   year={2022},
   month={May},
-  presort={07},
+  presort={08},
   rmdnote={pdf=https://arxiv.org/abs/2205.10159}
 }
