robust indices arxiv

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1373,3 +1373,13 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   presort={08},
   rmdnote={pdf=https://arxiv.org/abs/2205.10159}
 }
+
+@misc{bachfischer22testing,
+  title={Testing the Robustness of Learned Index Structures},
+  author={Matthias Bachfischer and Renata Borovica-Gajic and Benjamin I. P. Rubinstein},
+  note={arXiv:2207.11575 [cs.DB]},
+  year={2022},
+  month={July},
+  presort={09},
+  rmdnote={pdf=https://arxiv.org/abs/2207.11575}
+}
