--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -504,7 +504,7 @@ ranknote={a}
 @incollection{rubinstein2015bounding,
   title={Bounding embeddings of {VC} classes into maximum classes},
   author={Rubinstein, J. Hyam and Rubinstein, Benjamin I. P. and Bartlett, Peter L.},
-  booktitle={Measures of Complexity},
+  booktitle={Measures of Complexity: Festschrift of Alexey Chervonenkis},
   editor={Vovk, V. and Papadopoulos, H. and Gammerman, A.},
   pages={303--325},
   year={2015},
