--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1355,12 +1355,13 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
 @inproceedings{liu2022state,
   title = {State Selection Algorithms and Their Impact on The Performance of Stateful Network Protocol Fuzzing},
   author = {Dongge Liu and Van-Thuan Pham and Gidon Ernst and Toby Murray and Benjamin I.P. Rubinstein},
-  booktitle = {IEEE International Conference on Software Analysis, Evolution and Reengineering 2022},
+  booktitle = {2022 IEEE International Conference on Software Analysis, Evolution and Reengineering},
   year = {2022},
   series = {SANER},
   note = {REproducibility Studies and NEgative Results (RENE) Track},
+  pages = {720--730},
   presort={07},
-  rmdnote={full=https://arxiv.org/abs/2112.15498}
+  rmdnote={full=https://arxiv.org/abs/2112.15498;pub=https://ieeexplore.ieee.org/document/9825758}
 }
 
 @misc{jin2022getting,
