NeurIPS, NeurIPS, JSSAM

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1285,13 +1285,33 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   rmdnote={pdf=https://arxiv.org/abs/2108.10130}
 }
 
+@inproceedings{cullen2022double,
+  title={Double Bubble, Toil and Trouble: Enhancing Certified Robustness through Transitivity},
+  author={Andrew C. Cullen and Paul Montague and Shijie Liu and Sarah Monazam Erfani and Benjamin I. P. Rubinstein},
+  booktitle={Advances in Neural Information Processing Systems},
+  series={NeurIPS},
+  note={Accepted},
+  presort={01},
+  year={2022}
+}
+
+@inproceedings{rubinstein2022unlabelled,
+  title={Unlabelled Sample Compression Schemes for Intersection-Closed Classes and Extremal Classes},
+  author={J. Hyam Rubinstein and Benjamin I. P. Rubinstein},
+  booktitle={Advances in Neural Information Processing Systems},
+  series={NeurIPS},
+  note={Accepted},
+  presort={02},
+  year={2022}
+}
+
 @inproceedings{jin2022are,
   title={Are We There Yet? Timing and Floating-Point Attacks on Differential Privacy Systems},
   author={Jiankai Jin and Eleanor McMurtry and Benjamin I. P. Rubinstein and Olga Ohrimenko},
   year={2022},
   booktitle={2022 IEEE Symposium on Security and Privacy (SP)},
   pages={1547--1547},
-  presort={01},
+  presort={03},
   rmdnote={full=https://arxiv.org/abs/2112.05307;pub=https://www.computer.org/csdl/proceedings-article/sp/2022/131600b547/1CIO7Ty2xr2}
 }
 
@@ -1304,7 +1324,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   volume={36},
   number={7},
   pages={7691--7700},
-  presort={02},
+  presort={04},
   rmdnote={full=https://arxiv.org/abs/2109.08266;code=https://github.com/ngmarchant/attack-unlearning;pub=https://doi.org/10.1609/aaai.v36i7.20736}
 }
 
@@ -1316,7 +1336,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   number={1},
   pages={538--548},
   year={2022},
-  presort={03},
+  presort={05},
   rmdnote={full=https://arxiv.org/abs/2007.05975;pub=https://ieeexplore.ieee.org/document/9576501}
 }
 
@@ -1327,9 +1347,19 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   series={ACL},
   pages={2576--2590},
   year={2022},
-  presort={04},
+  presort={06},
   rmdnote={pub=https://aclanthology.org/2022.acl-long.184/}
 }
+
+@article{marchant2022bayesian,
+  title={{B}ayesian Graphical Entity Resolution using Exchangeable Random Partition Priors},
+  author={Marchant, Neil G. and Rubinstein, Benjamin I. P. and Steorts, Rebecca C.},
+  year={2022},
+  journal={Journal of Survey Statistics and Methodology},
+  note={Special Issue on Data Integration. Accepted},
+  publisher={Oxford University Press},
+  presort={07}
+  }
 
 @inproceedings{weera2021local,
   title={Local Intrinsic Dimensionality Signals Adversarial Perturbations},
@@ -1338,7 +1368,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   series={CDC},
   note={Accepted. In invited session Resilience, Security, and Privacy for Intelligent and Interconnected Systems},
   year={2022},
-  presort={05},
+  presort={08},
   rmdnote={full=https://arxiv.org/abs/2109.11803}
 }
 
@@ -1348,7 +1378,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   booktitle={European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases},
   series={ECML-PKDD},
   year={2022},
-  presort={06},
+  presort={09},
   note={Accepted}
 }
 
@@ -1360,7 +1390,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   series = {SANER},
   note = {REproducibility Studies and NEgative Results (RENE) Track},
   pages = {720--730},
-  presort={07},
+  presort={10},
   rmdnote={full=https://arxiv.org/abs/2112.15498;pub=https://ieeexplore.ieee.org/document/9825758}
 }
 
@@ -1371,7 +1401,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={arXiv:2205.10159 [cs.CR]},
   year={2022},
   month={May},
-  presort={08},
+  presort={11},
   rmdnote={pdf=https://arxiv.org/abs/2205.10159}
 }
 
@@ -1381,6 +1411,6 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={arXiv:2207.11575 [cs.DB]},
   year={2022},
   month={July},
-  presort={09},
+  presort={12},
   rmdnote={pdf=https://arxiv.org/abs/2207.11575}
 }
