--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1315,6 +1315,17 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   rmdnote={full=https://arxiv.org/abs/2112.05307;pub=https://www.computer.org/csdl/proceedings-article/sp/2022/131600b547/1CIO7Ty2xr2}
 }
 
+@article{perera2022hmab,
+  title={{HMAB}: Self-Driving Hierarchy of Bandits for Integrated Physical Database Design Tuning},
+  author={R. Malinga Perera and Bastian Oetomo and Benjamin I. P. Rubinstein and Renata Borovica-Gajic},
+  year={2022},
+  journal={Proceedings of the VLDB Endowment},
+  publisher={VLDB Endowment},
+  volume={16},
+  note={Accepted},
+  presort={04}
+}
+
 @article{marchant2022hard,
   title={Hard to Forget: Poisoning Attacks on Certified Machine Unlearning},
   author={Neil G. Marchant and Benjamin I. P. Rubinstein and Scott Alfeld},
@@ -1324,7 +1335,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   volume={36},
   number={7},
   pages={7691--7700},
-  presort={04},
+  presort={05},
   rmdnote={full=https://arxiv.org/abs/2109.08266;code=https://github.com/ngmarchant/attack-unlearning;pub=https://doi.org/10.1609/aaai.v36i7.20736}
 }
 
@@ -1336,7 +1347,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   number={1},
   pages={538--548},
   year={2022},
-  presort={05},
+  presort={06},
   rmdnote={full=https://arxiv.org/abs/2007.05975;pub=https://ieeexplore.ieee.org/document/9576501}
 }
 
@@ -1347,7 +1358,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   series={ACL},
   pages={2576--2590},
   year={2022},
-  presort={06},
+  presort={07},
   rmdnote={pub=https://aclanthology.org/2022.acl-long.184/}
 }
 
@@ -1358,7 +1369,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   journal={Journal of Survey Statistics and Methodology},
   note={Special Issue on Data Integration. Accepted},
   publisher={Oxford University Press},
-  presort={07}
+  presort={08}
   }
 
 @inproceedings{weera2021local,
@@ -1368,7 +1379,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   series={CDC},
   note={Accepted. In invited session Resilience, Security, and Privacy for Intelligent and Interconnected Systems},
   year={2022},
-  presort={08},
+  presort={09},
   rmdnote={full=https://arxiv.org/abs/2109.11803}
 }
 
@@ -1378,7 +1389,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   booktitle={European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases},
   series={ECML-PKDD},
   year={2022},
-  presort={09},
+  presort={10},
   note={Accepted}
 }
 
@@ -1390,7 +1401,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   series = {SANER},
   note = {REproducibility Studies and NEgative Results (RENE) Track},
   pages = {720--730},
-  presort={10},
+  presort={11},
   rmdnote={full=https://arxiv.org/abs/2112.15498;pub=https://ieeexplore.ieee.org/document/9825758}
 }
 
@@ -1401,7 +1412,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={arXiv:2205.10159 [cs.CR]},
   year={2022},
   month={May},
-  presort={11},
+  presort={12},
   rmdnote={pdf=https://arxiv.org/abs/2205.10159}
 }
 
@@ -1411,6 +1422,6 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={arXiv:2207.11575 [cs.DB]},
   year={2022},
   month={July},
-  presort={12},
+  presort={13},
   rmdnote={pdf=https://arxiv.org/abs/2207.11575}
 }
