--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1372,6 +1372,15 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   presort={08}
   }
 
+@inproceedings{wang2022foiling,
+  title={Foiling Training-Time Attacks on Neural Machine Translation Systems},
+  author={Wang, Jun and He, Xuanli and Rubinstein, Benjamin I. P. and Cohn, Trevor},
+  year={2022},
+  booktitle={Findings of the Association for Computational Linguistics: EMNLP 2022},
+  note={Accepted},
+  presort={09}
+}
+
 @inproceedings{weera2021local,
   title={Local Intrinsic Dimensionality Signals Adversarial Perturbations},
   author={Sandamal Weerasinghe and Tansu Alpcan and Sarah M. Erfani and Christopher Leckie and Benjamin I. P. Rubinstein},
@@ -1379,7 +1388,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   series={CDC},
   note={Accepted. In invited session Resilience, Security, and Privacy for Intelligent and Interconnected Systems},
   year={2022},
-  presort={09},
+  presort={10},
   rmdnote={full=https://arxiv.org/abs/2109.11803}
 }
 
@@ -1389,7 +1398,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   booktitle={European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases},
   series={ECML-PKDD},
   year={2022},
-  presort={10},
+  presort={11},
   note={Accepted}
 }
 
@@ -1401,7 +1410,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   series = {SANER},
   note = {REproducibility Studies and NEgative Results (RENE) Track},
   pages = {720--730},
-  presort={11},
+  presort={12},
   rmdnote={full=https://arxiv.org/abs/2112.15498;pub=https://ieeexplore.ieee.org/document/9825758}
 }
 
@@ -1412,7 +1421,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={arXiv:2205.10159 [cs.CR]},
   year={2022},
   month={May},
-  presort={12},
+  presort={13},
   rmdnote={pdf=https://arxiv.org/abs/2205.10159}
 }
 
@@ -1422,6 +1431,6 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={arXiv:2207.11575 [cs.DB]},
   year={2022},
   month={July},
-  presort={13},
+  presort={14},
   rmdnote={pdf=https://arxiv.org/abs/2207.11575}
 }
