arxiv for neurips22

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1302,7 +1302,8 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   series={NeurIPS},
   note={Accepted},
   presort={02},
-  year={2022}
+  year={2022},
+  rmdnote={full=https://arxiv.org/abs/2210.05455}
 }
 
 @inproceedings{jin2022are,
