neurips arxiv/code

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1292,7 +1292,8 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   series={NeurIPS},
   note={Accepted},
   presort={01},
-  year={2022}
+  year={2022},
+  rmdnote={full=https://arxiv.org/abs/2210.06077;code=https://github.com/andrew-cullen/DoubleBubble}
 }
 
 @inproceedings{rubinstein2022unlabelled,
