--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1304,7 +1304,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={Accepted},
   presort={02},
   year={2022},
-  rmdnote={full=https://arxiv.org/abs/2210.05455}
+  rmdnote={full=https://arxiv.org/abs/2210.05455;vid=https://recorder-v3.slideslive.com/#/share?share=76156&s=b89c0ea6-8bc0-4472-aa51-c1632814b669}
 }
 
 @inproceedings{jin2022are,
