--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1290,7 +1290,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   author={Andrew C. Cullen and Paul Montague and Shijie Liu and Sarah Monazam Erfani and Benjamin I. P. Rubinstein},
   booktitle={Advances in Neural Information Processing Systems},
   series={NeurIPS},
-  note={Accepted},
+  note={Accepted as Oral},
   presort={01},
   year={2022},
   rmdnote={full=https://arxiv.org/abs/2210.06077;code=https://github.com/andrew-cullen/DoubleBubble;vid=https://recorder-v3.slideslive.com/#/share?share=74042&s=8b0cbca4-1e05-445d-a46b-c33fae65a4f8}
