--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1324,8 +1324,10 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   journal={Proceedings of the VLDB Endowment},
   publisher={VLDB Endowment},
   volume={16},
-  note={Accepted},
-  presort={04}
+  number={2},
+  pages={216--229},
+  presort={04},
+  rmdnote={pub=http://vldb.org/pvldb/volumes/16/paper/HMAB%3A%20Self-Driving%20Hierarchy%20of%20Bandits%20for%20Integrated%20Physical%20Database%20Design%20Tuning;code=https://github.com/malingaperera/HMAB}
 }
 
 @article{marchant2022hard,
