--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1290,10 +1290,10 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   author={Andrew C. Cullen and Paul Montague and Shijie Liu and Sarah Monazam Erfani and Benjamin I. P. Rubinstein},
   booktitle={Advances in Neural Information Processing Systems},
   series={NeurIPS},
-  note={Accepted as Oral},
   presort={01},
   year={2022},
-  rmdnote={full=https://arxiv.org/abs/2210.06077;code=https://github.com/andrew-cullen/DoubleBubble;vid=https://recorder-v3.slideslive.com/#/share?share=74042&s=8b0cbca4-1e05-445d-a46b-c33fae65a4f8}
+  note={Accepted},
+  rmdnote={alert=Selected as Oral (7% of papers);full=https://arxiv.org/abs/2210.06077;code=https://github.com/andrew-cullen/DoubleBubble;vid=https://recorder-v3.slideslive.com/#/share?share=74042&s=8b0cbca4-1e05-445d-a46b-c33fae65a4f8}
 }
 
 @inproceedings{rubinstein2022unlabelled,
@@ -1366,23 +1366,13 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   rmdnote={pub=https://aclanthology.org/2022.acl-long.184/}
 }
 
-@article{marchant2022bayesian,
-  title={{B}ayesian Graphical Entity Resolution using Exchangeable Random Partition Priors},
-  author={Marchant, Neil G. and Rubinstein, Benjamin I. P. and Steorts, Rebecca C.},
-  year={2022},
-  journal={Journal of Survey Statistics and Methodology},
-  note={Special Issue on Data Integration. Accepted},
-  publisher={Oxford University Press},
-  presort={08}
-  }
-
 @inproceedings{wang2022foiling,
   title={Foiling Training-Time Attacks on Neural Machine Translation Systems},
   author={Wang, Jun and He, Xuanli and Rubinstein, Benjamin I. P. and Cohn, Trevor},
   year={2022},
   booktitle={Findings of the Association for Computational Linguistics: EMNLP 2022},
   note={Accepted},
-  presort={09}
+  presort={08}
 }
 
 @inproceedings{weera2021local,
@@ -1392,7 +1382,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   series={CDC},
   note={Accepted. In invited session Resilience, Security, and Privacy for Intelligent and Interconnected Systems},
   year={2022},
-  presort={10},
+  presort={09},
   rmdnote={full=https://arxiv.org/abs/2109.11803}
 }
 
@@ -1402,7 +1392,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   booktitle={European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases},
   series={ECML-PKDD},
   year={2022},
-  presort={11},
+  presort={10},
   note={Accepted}
 }
 
@@ -1414,7 +1404,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   series = {SANER},
   note = {REproducibility Studies and NEgative Results (RENE) Track},
   pages = {720--730},
-  presort={12},
+  presort={11},
   rmdnote={full=https://arxiv.org/abs/2112.15498;pub=https://ieeexplore.ieee.org/document/9825758}
 }
 
@@ -1425,7 +1415,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={arXiv:2205.10159 [cs.CR]},
   year={2022},
   month={May},
-  presort={13},
+  presort={12},
   rmdnote={pdf=https://arxiv.org/abs/2205.10159}
 }
 
@@ -1435,6 +1425,37 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={arXiv:2207.11575 [cs.DB]},
   year={2022},
   month={July},
-  presort={14},
+  presort={13},
   rmdnote={pdf=https://arxiv.org/abs/2207.11575}
+}
+
+@inproceedings{liu2023enhancing,
+  title={Enhancing the Antidote: Improved Pointwise Certifications against Poisoning Attacks},
+  author={Liu, Shijie and Cullen, Andrew C. and Montague, Paul and Erfani, Sarah Monazam and Rubinstein, Benjamin I. P.},
+  year={2023},
+  booktitle={Proceedings of the 37th AAAI Conference on Artificial Intelligence},
+  series={AAAI},
+  presort={01},
+  note={Accepted}
+}
+
+@inproceedings{sun2023an,
+  title={An Adversarial Strategic Game for Machine Learning as a Service using System Features},
+  author={Guoxin Sun and Tansu Alpcan and Andrew C. Cullen and Seyit Camtepe and Benjamin I. P. Rubinstein},
+  booktitle={Proceedings of the 22nd International Conference on Autonomous Agents and Multiagent Systems},
+  series={AAMAS},
+  year={2023},
+  presort={02},
+  note={Extended abstract. Accepted}
+}
+
+@article{marchant2023bayesian,
+  title={{B}ayesian Graphical Entity Resolution using Exchangeable Random Partition Priors},
+  author={Marchant, Neil G. and Rubinstein, Benjamin I. P. and Steorts, Rebecca C.},
+  year={2023},
+  journal={Journal of Survey Statistics and Methodology},
+  note={In press},
+  publisher={Oxford University Press},
+  presort={03},
+  rmdnote={pub=https://doi.org/10.1093/jssam/smac030}
 }
