group update, JSSAM arXiv

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1457,5 +1457,5 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={In press},
   publisher={Oxford University Press},
   presort={02},
-  rmdnote={pub=https://doi.org/10.1093/jssam/smac030}
+  rmdnote={pub=https://doi.org/10.1093/jssam/smac030;full=https://arxiv.org/abs/2301.02962}
 }
