--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1459,3 +1459,23 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   presort={02},
   rmdnote={pub=https://doi.org/10.1093/jssam/smac030;full=https://arxiv.org/abs/2301.02962}
 }
+
+
+@inproceedings{liu2023efficient,
+  title = {Efficient Index Learning via Model Reuse and Fine-tuning},
+  author = {Guanli Liu and Jianzhong Qi and Lars Kulik and Kazuya Soga and Renata Borovica-Gajic and Rubinstein, Benjamin I. P.},
+  booktitle = {International Workshop on Databases and Machine Learning},
+  series = {DBML},
+  notes = {Co-located with ICDE. Accepted},
+  year = {2023},
+  presort={04}
+}
+
+@article{oetomo2023cutting,
+  title = {Cutting to the Chase with Warm-Start Contextual Bandits},
+  author = {Oetomo, Bastian Saputra and Perera, R. Malinga and Borovica-Gajic, Renata and Rubinstein, Benjamin I. P.},
+  year = {2023},
+  journal = {Knowledge and Information Systems},
+  notes = {Accepted},
+  presort={05}
+}
