arXiv cert malware

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1445,7 +1445,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   booktitle={Proceedings of the 22nd International Conference on Autonomous Agents and Multiagent Systems},
   series={AAMAS},
   year={2023},
-  presort={03},
+  presort={04},
   note={Extended abstract. Accepted}
 }
 
@@ -1460,6 +1460,15 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   rmdnote={pub=https://doi.org/10.1093/jssam/smac030;full=https://arxiv.org/abs/2301.02962}
 }
 
+@article{oetomo2023cutting,
+  title = {Cutting to the Chase with Warm-Start Contextual Bandits},
+  author = {Oetomo, Bastian Saputra and Perera, R. Malinga and Borovica-Gajic, Renata and Rubinstein, Benjamin I. P.},
+  year = {2023},
+  journal = {Knowledge and Information Systems},
+  notes = {Accepted},
+  presort={03}
+}
+
 
 @inproceedings{liu2023efficient,
   title = {Efficient Index Learning via Model Reuse and Fine-tuning},
@@ -1468,14 +1477,16 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   series = {DBML},
   notes = {Co-located with ICDE. Accepted},
   year = {2023},
-  presort={04}
-}
-
-@article{oetomo2023cutting,
-  title = {Cutting to the Chase with Warm-Start Contextual Bandits},
-  author = {Oetomo, Bastian Saputra and Perera, R. Malinga and Borovica-Gajic, Renata and Rubinstein, Benjamin I. P.},
-  year = {2023},
-  journal = {Knowledge and Information Systems},
-  notes = {Accepted},
   presort={05}
 }
+
+@misc{huang2023certified,
+  title={Certified Robustness of Learning-based Static Malware Detectors},
+  author={Huang, Zhuoqun and Marchant, Neil G and Lucas, Keane and Bauer, Lujo and Ohrimenko, Olga and Rubinstein, Benjamin I. P.},
+  note={arXiv:2207.11575 [cs.CR]},
+  year={2023},
+  month={January},
+  presort={06},
+  rmdnote={pdf=https://arxiv.org/abs/2302.01757}
+}
+
