--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1490,3 +1490,12 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   rmdnote={pdf=https://arxiv.org/abs/2302.01757}
 }
 
+@misc{cullen2023exploiting,
+  title={Exploiting Certified Defences to Attack Randomised Smoothing},
+  author={Cullen, Andrew C. and Montague, Paul and Liu, Shijie and Erfani, Sarah M. and Rubinstein, Benjamin I. P.},
+  note={arXiv:2302.04379 [cs.LG]},
+  year={2023},
+  month={February},
+  presort={07},
+  rmdnote={pdf=https://arxiv.org/abs/2302.04379}
+}
