--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1445,7 +1445,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   booktitle={Proceedings of the 22nd International Conference on Autonomous Agents and Multiagent Systems},
   series={AAMAS},
   year={2023},
-  presort={04},
+  presort={05},
   note={Extended abstract. Accepted}
 }
 
@@ -1469,6 +1469,14 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   presort={03}
 }
 
+@article{cullen2023predicting,
+  title={Predicting dynamic spectrum allocation: a review covering simulation, modelling, and prediction},
+  author={Cullen, Andrew C. and Rubinstein, Benjamin I. P. and Kandeepan, Sithamparanathan and Flower, Barry and Leong, Philip H. W.},
+  journal={Artificial Intelligence Review},
+  year={2023},
+  presort={04},
+  rmdnote={pub=https://doi.org/10.1007/s10462-023-10449-9}
+}
 
 @inproceedings{liu2023efficient,
   title = {Efficient Index Learning via Model Reuse and Fine-tuning},
@@ -1477,7 +1485,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   series = {DBML},
   notes = {Co-located with ICDE. Accepted},
   year = {2023},
-  presort={05}
+  presort={06}
 }
 
 @misc{huang2023certified,
@@ -1486,7 +1494,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={arXiv:2207.11575 [cs.CR]},
   year={2023},
   month={January},
-  presort={06},
+  presort={07},
   rmdnote={pdf=https://arxiv.org/abs/2302.01757}
 }
 
@@ -1496,6 +1504,6 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={arXiv:2302.04379 [cs.LG]},
   year={2023},
   month={February},
-  presort={07},
+  presort={08},
   rmdnote={pdf=https://arxiv.org/abs/2302.04379}
 }
